--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Search</title>
   </head>
   <body>
+    <a href="image.html">Image Search</a>
+    <a href="advanced.html">Advanced Search</a>
     <form action="https://www.google.com/search">
       <input type="text" name="q" />
       <input type="submit" value="Google Search" />
