--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <a href="image.html">Image Search</a>
     <a href="advanced.html">Advanced Search</a>
     <form action="https://www.google.com/search">
-      <input type="text" name="q" />
-      <input type="submit" value="Google Search" />
+      <div>
+        <input type="text" name="q" />
+      </div>
+      <div>
+        <input type="submit" value="Google Search" />
+      </div>
     </form>
   </body>
 </html>
