--- a/advanced.html
+++ b/advanced.html
@@ -7,8 +7,8 @@
   <body>
     <a href="index.html">Google Search</a>
     <form action="https://www.google.com/search">
-      <input type="text" name="q" />
-      <input type="submit" value="Google Search" />
+      <div class="center"><input type="text" name="q" /></div>
+      <div class="center"><input type="submit" value="Google Search" /></div>
     </form>
   </body>
 </html>
