--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <title>Search</title>
   </head>
   <body>
-    <a href="image.html">Image Search</a>
-    <a href="advanced.html">Advanced Search</a>
-    <form action="https://www.google.com/search">
-      <div>
-        <input type="text" name="q" />
+    <div class="container">
+      <div class="item item1">
+        <a href="image.html">Image Search</a>
+        <a href="advanced.html">Advanced Search</a>
       </div>
-      <div>
-        <input type="submit" value="Google Search" />
+      <div class="item item2">
+        <form action="https://www.google.com/search">
+          <div>
+            <input type="text" name="q" />
+          </div>
+          <div>
+            <input type="submit" value="Google Search" />
+          </div>
+        </form>
       </div>
-    </form>
+    </div>
   </body>
 </html>
