--- a/advanced.html
+++ b/advanced.html
@@ -5,10 +5,20 @@
     <title>Search</title>
   </head>
   <body>
-    <a href="index.html">Google Search</a>
-    <form action="https://www.google.com/search">
-      <div class="center"><input type="text" name="q" /></div>
-      <div class="center"><input type="submit" value="Google Search" /></div>
-    </form>
+    <div class="container">
+      <div class="item item1">
+        <a href="index.html">Google Search</a>
+      </div>
+      <div class="item item2">
+        <form action="https://www.google.com/search">
+          <div>
+            <input type="text" name="q" />
+          </div>
+          <div>
+            <input type="submit" value="Google Search" />
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
