--- a/advanced.html
+++ b/advanced.html
@@ -6,17 +6,57 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item1">
+      <div class="box box1">
         <a href="index.html">Google Search</a>
       </div>
-      <div class="item item2">
-        <form action="https://www.google.com/search">
-          <div>
-            <input type="text" name="q" />
-          </div>
-          <div>
-            <input type="submit" value="Google Search" />
-          </div>
+      <div class="box box3">
+        <form action="https://google.com/search">
+          <table>
+            <thead>
+              <th>Advanced Search</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="advanced">all these words:</td>
+                <td>
+                  <input class="advanced-text-input" type="text" name="as_q" />
+                </td>
+              </tr>
+              <tr>
+                <td class="advanced">this exact word or phrase:</td>
+                <td>
+                  <input
+                    class="advanced-text-input"
+                    type="text"
+                    name="as_epq"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td class="advanced">any of these words:</td>
+                <td>
+                  <input class="advanced-text-input" type="text" name="as_oq" />
+                </td>
+              </tr>
+              <tr>
+                <td class="advanced">none of these words:</td>
+                <td>
+                  <input class="advanced-text-input" type="text" name="as_eq" />
+                </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>
+                  <input
+                    class="advanced-search"
+                    type="submit"
+                    name="btnK"
+                    value="Advanced Search"
+                  />
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </form>
       </div>
     </div>
