--- a/image.html
+++ b/image.html
@@ -6,16 +6,26 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item1">
+      <div class="box box1">
         <a href="index.html">Google Search</a>
       </div>
-      <div class="item item2">
-        <form action="https://www.google.com/search">
-          <div>
-            <input type="text" name="q" />
+      <div class="box box2">
+        <form action="https://google.com/image">
+          <div class="search-bar">
+            <svg
+              focusable="false"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+              ></path>
+            </svg>
+            <input class="text-input" type="text" name="q" />
           </div>
           <div>
-            <input type="submit" value="Google Search" />
+            <input type="submit" name="btnK" value="Google Search" />
+            <input type="submit" name="btnI" value="I'm Feeling Lucky" />
           </div>
         </form>
       </div>
