--- a/advanced.html
+++ b/advanced.html
@@ -10,52 +10,45 @@
         <a href="index.html">Google Search</a>
       </div>
       <div class="box box3">
+        <h1>Advanced Search</h1>
+        <hr />
         <form action="https://google.com/search">
           <table>
-            <thead>
-              <th>Advanced Search</th>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="advanced">all these words:</td>
-                <td>
-                  <input class="advanced-text-input" type="text" name="as_q" />
-                </td>
-              </tr>
-              <tr>
-                <td class="advanced">this exact word or phrase:</td>
-                <td>
-                  <input
-                    class="advanced-text-input"
-                    type="text"
-                    name="as_epq"
-                  />
-                </td>
-              </tr>
-              <tr>
-                <td class="advanced">any of these words:</td>
-                <td>
-                  <input class="advanced-text-input" type="text" name="as_oq" />
-                </td>
-              </tr>
-              <tr>
-                <td class="advanced">none of these words:</td>
-                <td>
-                  <input class="advanced-text-input" type="text" name="as_eq" />
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>
-                  <input
-                    class="advanced-search"
-                    type="submit"
-                    name="btnK"
-                    value="Advanced Search"
-                  />
-                </td>
-              </tr>
-            </tbody>
+            <tr>
+              <td class="advanced">all these words:</td>
+              <td>
+                <input class="advanced-text-input" type="text" name="as_q" />
+              </td>
+            </tr>
+            <tr>
+              <td class="advanced">this exact word or phrase:</td>
+              <td>
+                <input class="advanced-text-input" type="text" name="as_epq" />
+              </td>
+            </tr>
+            <tr>
+              <td class="advanced">any of these words:</td>
+              <td>
+                <input class="advanced-text-input" type="text" name="as_oq" />
+              </td>
+            </tr>
+            <tr>
+              <td class="advanced">none of these words:</td>
+              <td>
+                <input class="advanced-text-input" type="text" name="as_eq" />
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                <input
+                  class="advanced-search"
+                  type="submit"
+                  name="btnK"
+                  value="Advanced Search"
+                />
+              </td>
+            </tr>
           </table>
         </form>
       </div>
